# typistapp-rs

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  docs.yml  rust.yml
assets/: typeset.txt
src/: color.rs  correlation.rs  element.rs  lib.rs  main.rs  model.rs  view.rs
