[package]
name = "typistapp"
version = "0.1.0"
edition = "2024"
author = "anrinakamura"
description = "Typist-art generator for TUI"
license = "MIT"

[dependencies]
ab_glyph = "0.2.29"
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
crossterm = "0.29.0"
env_logger = "0.11.8"
image = "0.25.6"
log = "0.4.27"
rayon = "1.10.0"
