[package]
name = "typistapp"
version = "0.1.0"
authors = ["@anrinakamura"]
description = "Typist-art generator for TUI"
edition = "2024"
license = "MIT"
repository = "https://github.com/anrinakamura/typistapp-rs"
keywords = ["ascii-art", "cli", "tui", "terminal"]

[[bin]]
name = "typistapp"
path = "src/main.rs"

[lib]
name = "typistapp"
path = "src/lib.rs"

[dependencies]
ab_glyph = "0.2.29"
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
crossterm = "0.29.0"
env_logger = "0.11.8"
image = "0.25.6"
log = "0.4.27"
rayon = "1.10.0"
